# charmtally

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  corpus-overrides.yaml  dashboard.html  features.yaml  may-2026.csv  pyproject.toml  results.json  scored.json
.github/: check-conventional-pr-title.py  dependabot.yaml
.github/workflows/: actionlint.yaml  actionlint.yml  ci.yaml  ci.yml  dependency-review.yaml  dependency-review.yml  scan.yaml  scan.yml  validate-pr-title.yaml  zizmor.yaml  zizmor.yml
charmtally/: catalogue.py  cli.py  corpus.py  dashboard.py  detectors.py  llm_score.py  metadata.py  pairs.py  scan.py  scoring.py  trend.py
charmtally/templates/: dashboard.html.j2  trend.html.j2
charmtally/tests/: test_audit.py  test_catalogue.py  test_dashboard.py  test_detectors.py  test_llm_score.py  test_metadata.py  test_pairs.py  test_scan_fanout.py  test_scoring.py  test_trend.py
charmtally/tools/: __init__.py  audit.py
snapshots/: scored-2026-06-22.json
