[project]
name = "charmtally"
version = "0.0.1"
description = "Scan a corpus of charms for feature adoption."
requires-python = ">=3.10"
dependencies = ["pyyaml", "jinja2"]

[project.scripts]
charmtally = "charmtally.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["charmtally"]
