[project]
name = "charmtally"
version = "0.0.1"
description = "Scan a corpus of charms for feature adoption."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tony Meyer", email = "tony.meyer@gmail.com" }]
keywords = ["juju", "charm", "ops", "pebble", "canonical"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml", "jinja2"]

[project.urls]
Repository = "https://github.com/tonyandrewmeyer/charmtally"
Issues = "https://github.com/tonyandrewmeyer/charmtally/issues"
Dashboard = "https://tonyandrewmeyer.github.io/charmtally/dashboard.html"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
charmtally = "charmtally.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["charmtally"]

[tool.pytest.ini_options]
testpaths = ["charmtally/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
