[project]
name = "charmtally"
version = "0.0.1"
description = "Scan a corpus of charms for feature adoption."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Tony Meyer", email = "charmtally@aotearoa.dev" }]
keywords = ["juju", "charm", "ops", "pebble", "canonical"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml", "jinja2"]

[project.urls]
Repository = "https://github.com/tonyandrewmeyer/charmtally"
Issues = "https://github.com/tonyandrewmeyer/charmtally/issues"
Dashboard = "https://tonyandrewmeyer.github.io/charmtally/dashboard.html"

[project.scripts]
charmtally = "charmtally.cli:main"

[dependency-groups]
dev = [
  "codespell>=2.3",
  "pre-commit>=4",
  "pytest>=8",
  "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["charmtally"]

[tool.pytest.ini_options]
testpaths = ["charmtally/tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.codespell]
ignore-words-list = "ths,re-uses"
skip = "dashboard.html,results.json,scored.json,uv.lock,snapshots"
